--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,42 @@
 amqp==2.6.1
+arrow==1.2.2
 asgiref==3.5.0
 billiard==3.6.4.0
+binaryornot==0.4.4
 celery==4.4.7
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.0.4
+colorama==0.4.4
+cookiecutter==1.7.3
 coverage==6.3.2
 Deprecated==1.2.13
+dj-database-url==0.5.0
 Django==4.0.1
 django-filter==21.1
 djangorestframework==3.13.1
 drf-nested-routers==0.93.4
+gunicorn==20.1.0
+idna==3.3
+Jinja2==3.0.3
+jinja2-time==0.2.0
 kombu==4.6.11
+MarkupSafe==2.1.0
 packaging==21.3
+poyo==0.5.0
+psycopg2==2.9.3
 pyparsing==3.0.7
+python-dateutil==2.8.2
+python-slugify==6.1.1
 pytz==2021.3
 redis==4.1.4
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
 tzdata==2021.5
+urllib3==1.26.8
 vine==1.3.0
+whitenoise==6.0.0
 wrapt==1.13.3
